--- a/adminpanel/templates/adminpanel/base.html
+++ b/adminpanel/templates/adminpanel/base.html
@@ -70,6 +70,11 @@
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+{% block extra_js %}
+
+{% endblock %}
 
 </body>
 </html>
