--- a/adminpanel/templates/adminpanel/products/product_list.html
+++ b/adminpanel/templates/adminpanel/products/product_list.html
@@ -10,7 +10,7 @@
     </a>
 </div>
 
-<!-- 🔍 SEARCH -->
+<!--  SEARCH -->
 <form method="get" class="row g-2 mb-4">
     <div class="col-md-4">
         <input type="text"
@@ -43,7 +43,7 @@
 </form>
 
 
-<!-- 📋 PRODUCT TABLE -->
+<!--  PRODUCT TABLE -->
 <form method="post" action="{% url 'adminpanel:product_bulk_delete' %}">
     {% csrf_token %}
 
@@ -113,7 +113,7 @@
     </div>
 </form>
 
-<!-- 📄 PAGINATION -->
+<!--  PAGINATION -->
 {% if products.paginator.num_pages > 1 %}
 <nav class="mt-4">
     <ul class="pagination justify-content-center">
